# ssmtool

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ssmtool
.github/workflows/: build.yml  release.yml
cmds/: test.sh
src/: lib.rs  main.rs
src/cli/: cmdline.rs  env.rs  mod.rs
