[package]
name = "ssmtool"
description = "A CLI for SSM Parameter Store"
publish = false
license = "MIT"
version = "0.1.0"
authors = ["Anton Barkovsky <anton@swarmer.me>"]
edition = "2018"

[dependencies]
clap = "^2.33.0"
failure = "^0.1.7"
rusoto_core = "^0.43.0"
rusoto_ssm = "^0.43.0"
tokio = "^0.2.13"
log = "^0.4.8"
env_logger = "^0.7.1"
